[gd_scene load_steps=3 format=3 uid="uid://bmt6wrbs50cbi"]

[ext_resource type="PackedScene" uid="uid://du22yoe4mfflm" path="res://scenes/gun.tscn" id="1_x3eis"]
[ext_resource type="Script" path="res://scripts/point_defence.gd" id="1_y4j8c"]

[node name="PointDefense" type="Node2D"]
script = ExtResource("1_y4j8c")

[node name="Gun1" parent="." instance=ExtResource("1_x3eis")]
unique_name_in_owner = true
position = Vector2(32, 166)

[node name="Gun2" parent="." instance=ExtResource("1_x3eis")]
unique_name_in_owner = true
position = Vector2(288, 166)

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
